fix: fixed typewriter wrapping
Added a container query to ensure that the hero-text and typewriter do
not wrap awkwardly just before reaching the next breakpoint when
resizing from full size.

--- a/css/pages/homepage.css
+++ b/css/pages/homepage.css
@@ -71,6 +71,26 @@
   gap: 0.75em;
 }
 
+#hero-text {
+  container-type: inline-size;
+  width: 100%;
+}
+
+@container (max-width: 400px) {
+  #i-am-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0em;
+    margin-bottom: 1.5em;
+  }
+
+  #hero-text > h1:first-of-type {
+    text-align: center;
+    width: 100%;
+  }
+}
+
 .hero-section p {
   font-size: 20px;
 }
@@ -85,6 +105,7 @@
 #typewriter {
   position: relative;
   color: var(--typewriter-color);
+  white-space: nowrap;
 }
 
 #typewriter::after {
